--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,30 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     },
     {
-      "src": "public/**",
+      "src": "dist/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/src/index.ts"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/styles/(.*)",
-      "dest": "/styles/$1"
+      "dest": "/dist/styles/$1"
     },
     {
       "src": "/src/(.*)",
-      "dest": "/src/$1"
+      "dest": "/dist/src/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/public/index.html"
+      "dest": "/dist/public/index.html"
     }
   ]
 }
